--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: chariot2
-Title: What the Package Does (One Line, Title Case)
+Package: chariotViz
+Title: Visualize the OMOP Vocabularies
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Meera",
@@ -7,7 +7,8 @@ Authors@R:
            role = c("aut", "cre"),
            email = "mpatel@concertai.com",
            comment = c(ORCID = "0000-0002-3401-3948"))
-Description: What the package does (one paragraph).
+Description: Setup and visualize the OMOP Vocabularies as 
+Nodes and Edges.  
 License: Apache License 2.0
 Encoding: UTF-8
 LazyData: true
