change cache dirs to chariotViz

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(map_node_attributes)
 export(map_to_value)
 export(read_sql_template)
 export(save_to_cache)
+import(cli)
 import(dplyr)
 import(stringr)
 import(tibble)
