deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(construct_graph)
 export(create_legend)
 export(create_nodes_and_edges)
 export(fetch_concept_classes)
+export(fetch_heatmap)
 export(fetch_omop)
 export(hux_bold_values)
 export(hux_colorize)
@@ -14,11 +15,13 @@ export(hux_pretty_percents)
 export(map_edge_attributes)
 export(map_node_attributes)
 export(map_to_value)
+export(plot_heatmap)
 export(save_to_cache)
 import(cli)
 import(dplyr)
 import(stringr)
 import(tibble)
+importClassesFrom(DiagrammeR,dgr_graph)
 importFrom(DiagrammeR,create_graph)
 importFrom(R.cache,loadCache)
 importFrom(R.cache,saveCache)
@@ -47,6 +50,11 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(forcats,fct_recode)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_fill_viridis_c)
+importFrom(ggplot2,theme)
 importFrom(glue,glue)
 importFrom(huxtable,by_rows)
 importFrom(huxtable,hux)
@@ -57,6 +65,7 @@ importFrom(pg13,query)
 importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,reduce)
+importFrom(purrr,select)
 importFrom(purrr,set_names)
 importFrom(purrr,transpose)
 importFrom(rlang,parse_expr)
