--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,10 @@ export(map_node_attributes)
 export(map_to_value)
 export(plot_heatmap)
 export(save_to_cache)
+exportClasses(edges)
+exportClasses(nodes)
+exportClasses(nodes.and.edges)
+exportClasses(omop.relationships)
 import(cli)
 import(dplyr)
 import(stringr)
