deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ exportClasses(nodes.and.edges)
 exportClasses(omop.relationships)
 import(cli)
 import(dplyr)
+import(ggplot2)
 import(stringr)
 import(tibble)
 importFrom(DiagrammeR,create_graph)
@@ -53,11 +54,6 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(forcats,fct_recode)
-importFrom(ggplot2,element_text)
-importFrom(ggplot2,geom_tile)
-importFrom(ggplot2,ggplot)
-importFrom(ggplot2,scale_fill_viridis_c)
-importFrom(ggplot2,theme)
 importFrom(glue,glue)
 importFrom(huxtable,by_rows)
 importFrom(huxtable,hux)
