deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(create_legend)
 export(create_nodes_and_edges)
 export(fetch_heatmap)
 export(fetch_omop)
+export(get_version_key)
 export(hux_bold_values)
 export(hux_colorize)
 export(hux_pretty_numbers)
