deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(add_tooltip)
 export(construct_graph)
 export(create_legend)
 export(create_nodes_and_edges)
+export(delete_cache)
 export(fetch_heatmap)
 export(fetch_omop)
 export(get_version_key)
@@ -26,6 +27,7 @@ import(cli)
 import(dplyr)
 import(ggplot2)
 importFrom(DiagrammeR,create_graph)
+importFrom(R.cache,clearCache)
 importFrom(R.cache,loadCache)
 importFrom(R.cache,saveCache)
 importFrom(cli,cli_alert_success)
