--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,14 @@
 export("%>%")
 export()
 export(add_tooltip)
+export(chariotViz)
 export(construct_graph)
 export(create_legend)
 export(create_nodes_and_edges)
 export(delete_cache)
 export(fetch_heatmap)
 export(fetch_omop)
+export(filter_graph)
 export(get_version_key)
 export(hux_bold_values)
 export(hux_colorize)
@@ -27,6 +29,7 @@ import(cli)
 import(dplyr)
 import(ggplot2)
 importFrom(DiagrammeR,create_graph)
+importFrom(DiagrammeR,render_graph)
 importFrom(R.cache,clearCache)
 importFrom(R.cache,loadCache)
 importFrom(R.cache,saveCache)
@@ -36,6 +39,8 @@ importFrom(cli,cli_warn)
 importFrom(dplyr,any_of)
 importFrom(dplyr,distinct)
 importFrom(dplyr,enquo)
+importFrom(dplyr,enquos)
+importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
