deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,8 @@ export(create_nodes_and_edges)
 export(delete_cache)
 export(fetch_heatmap)
 export(fetch_omop)
-export(filter_graph)
+export(filter_edges)
+export(filter_nodes)
 export(get_version_key)
 export(hux_bold_values)
 export(hux_colorize)
