deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(add_tooltip)
 export(chariotViz)
 export(construct_graph)
+export(construct_graph2)
 export(create_legend)
 export(create_nodes_and_edges)
 export(delete_cache)
