deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,9 @@ export(create_nodes_and_edges)
 export(delete_cache)
 export(fetch_heatmap)
 export(fetch_omop)
-export(filter_edges)
-export(filter_nodes)
+export(filter_edge_id)
+export(filter_node_id_1)
+export(filter_node_id_2)
 export(get_version_key)
 export(hux_bold_values)
 export(hux_colorize)
@@ -22,6 +23,10 @@ export(map_node_attributes)
 export(map_to_value)
 export(plot_heatmap)
 export(save_to_cache)
+export(subgraph)
+export(view_all_counts)
+export(view_from_counts)
+export(view_to_counts)
 exportClasses(edges)
 exportClasses(nodes)
 exportClasses(nodes.and.edges)
@@ -31,6 +36,7 @@ import(dplyr)
 import(ggplot2)
 importFrom(DiagrammeR,create_graph)
 importFrom(DiagrammeR,render_graph)
+importFrom(DiagrammeR,transform_to_subgraph_ws)
 importFrom(R.cache,clearCache)
 importFrom(R.cache,loadCache)
 importFrom(R.cache,saveCache)
@@ -38,6 +44,8 @@ importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_warn)
 importFrom(dplyr,any_of)
+importFrom(dplyr,arrange)
+importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,enquo)
 importFrom(dplyr,enquos)
@@ -46,6 +54,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
+importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
