deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(map_edge_attributes)
 export(map_node_attributes)
 export(map_to_value)
 export(plot_heatmap)
+export(remap_fillcolor_by_domain)
 export(save_to_cache)
 export(subgraph)
 export(view_all_counts)
