--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
 pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: {}
-last_built: 2021-08-13T07:58Z
+articles:
+  getting-started: getting-started.html
+last_built: 2021-08-14T05:14Z
 
