--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,6 +2,6 @@ pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
-  getting-started: getting-started.html
-last_built: 2021-08-14T05:14Z
+  template: template.html
+last_built: 2021-08-14T05:32Z
 
