deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,17 @@ export("%>%")
 export(add_tooltip)
 export(chariotViz)
 export(construct_graph)
-export(construct_graph2)
 export(create_legend)
 export(create_nodes_and_edges)
 export(delete_cache)
+export(edge_color_map)
+export(edge_style_map)
 export(fetch_heatmap)
 export(fetch_omop)
 export(filter_edge_id)
 export(filter_node_id_1)
 export(filter_node_id_2)
+export(filter_omop_relationships)
 export(get_version_key)
 export(hux_bold_values)
 export(hux_colorize)
@@ -21,7 +23,9 @@ export(hux_pretty_percents)
 export(map_edge_attributes)
 export(map_node_attributes)
 export(map_to_value)
+export(node_color_map)
 export(plot_heatmap)
+export(remap_fillcolor_by_concept_class)
 export(remap_fillcolor_by_domain)
 export(save_to_cache)
 export(subgraph)
@@ -35,6 +39,10 @@ exportClasses(omop.relationships)
 import(cli)
 import(dplyr)
 import(ggplot2)
+import(glue)
+import(pg13)
+import(purrr)
+import(tidyr)
 importFrom(DiagrammeR,create_graph)
 importFrom(DiagrammeR,render_graph)
 importFrom(DiagrammeR,transform_to_subgraph_ws)
@@ -69,7 +77,6 @@ importFrom(magrittr,"%>%")
 importFrom(pg13,query)
 importFrom(purrr,keep)
 importFrom(purrr,map)
-importFrom(purrr,reduce)
 importFrom(purrr,set_names)
 importFrom(purrr,transpose)
 importFrom(rlang,parse_expr)
