--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(edge_color_map)
 export(edge_style_map)
 export(fetch_heatmap)
 export(fetch_omop)
+export(fetch_omop_ancestors)
+export(fetch_omop_relationships)
 export(filter_edge_id)
 export(filter_node_id_1)
 export(filter_node_id_2)
