deploy pkg and GitHub Pages using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,9 +14,15 @@ export(fetch_omop)
 export(fetch_omop_ancestors)
 export(fetch_omop_relationships)
 export(filter_edge_id)
+export(filter_for_lateral_relationships)
+export(filter_for_mapping_relationships)
+export(filter_for_taxonomy_relationships)
 export(filter_node_id_1)
 export(filter_node_id_2)
 export(filter_omop_relationships)
+export(filter_out_lateral_relationships)
+export(filter_out_mapping_relationships)
+export(filter_out_taxonomy_relationships)
 export(get_version_key)
 export(hux_bold_values)
 export(hux_colorize)
@@ -26,6 +32,7 @@ export(map_edge_attributes)
 export(map_node_attributes)
 export(map_to_value)
 export(node_color_map)
+export(omop_relationship_id_classification)
 export(plot_heatmap)
 export(remap_fillcolor_by_concept_class)
 export(remap_fillcolor_by_domain)
@@ -37,6 +44,7 @@ export(view_to_counts)
 exportClasses(edges)
 exportClasses(nodes)
 exportClasses(nodes.and.edges)
+exportClasses(omop.ancestors)
 exportClasses(omop.relationships)
 import(cli)
 import(dplyr)
