--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(add_tooltip)
+export(append_concept_examples)
 export(chariotViz)
 export(construct_graph)
 export(create_legend)
@@ -45,6 +46,7 @@ exportClasses(edges)
 exportClasses(nodes)
 exportClasses(nodes.and.edges)
 exportClasses(omop.ancestors)
+exportClasses(omop.concept.example)
 exportClasses(omop.relationships)
 import(cli)
 import(dplyr)
@@ -64,6 +66,7 @@ importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_warn)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,enquo)
@@ -73,10 +76,13 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
+importFrom(dplyr,mutate_at)
 importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
+importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(forcats,fct_recode)
 importFrom(glue,glue)
 importFrom(huxtable,by_rows)
