--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,9 @@ Authors@R:
     person(given = "Meera",
            family = "Patel",
            role = c("aut", "cre"),
-           email = "patelmeeray@gmail.com")
-Description: Setup and visualize the OMOP Vocabularies as Nodes and Edges.  
+           email = "patelmeeray@gmail.com",
+           comment = c(ORCID = "0000-0002-3401-3948"))
+Description: Visualize the OMOP Vocabularies as Nodes and Edges in DiagrammeR.    
 License: Apache License 2.0
 Encoding: UTF-8
 LazyData: true
