deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,8 @@ export(hux_pretty_percents)
 export(map_edge_attributes)
 export(map_node_attributes)
 export(map_to_value)
+export(mutate_edges)
+export(mutate_nodes)
 export(node_color_map)
 export(omop_relationship_id_classification)
 export(plot_heatmap)
@@ -61,6 +63,7 @@ importFrom(DiagrammeR,transform_to_subgraph_ws)
 importFrom(R.cache,clearCache)
 importFrom(R.cache,loadCache)
 importFrom(R.cache,saveCache)
+importFrom(cli,cli_abort)
 importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_warn)
