deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,19 @@ export(add_tooltip)
 export(append_concept_examples)
 export(chariotViz)
 export(construct_graph)
+export(create_ancestor_nodes_and_edges)
+export(create_complete_nodes_and_edges)
 export(create_legend)
 export(create_nodes_and_edges)
 export(delete_cache)
 export(edge_color_map)
 export(edge_style_map)
+export(fetch_complete_omop_relationships)
 export(fetch_heatmap)
 export(fetch_omop)
 export(fetch_omop_ancestors)
 export(fetch_omop_relationships)
+export(filter_complete_omop_relationships)
 export(filter_edge_id)
 export(filter_for_lateral_relationships)
 export(filter_for_mapping_relationships)
@@ -24,7 +28,9 @@ export(filter_omop_relationships)
 export(filter_out_lateral_relationships)
 export(filter_out_mapping_relationships)
 export(filter_out_taxonomy_relationships)
+export(get_logged_version_key)
 export(get_version_key)
+export(get_vocabulary_version_key)
 export(hux_bold_values)
 export(hux_colorize)
 export(hux_pretty_numbers)
@@ -39,11 +45,18 @@ export(omop_relationship_id_classification)
 export(plot_heatmap)
 export(remap_fillcolor_by_concept_class)
 export(remap_fillcolor_by_domain)
+export(remap_fillcolor_by_invalid_reason)
 export(save_to_cache)
 export(subgraph)
 export(view_all_counts)
 export(view_from_counts)
 export(view_to_counts)
+exportClasses(ancestor.nodes)
+exportClasses(ancestor.nodes.and.edges)
+exportClasses(complete.edges)
+exportClasses(complete.nodes)
+exportClasses(complete.nodes.and.edges)
+exportClasses(complete.omop.relationships)
 exportClasses(edges)
 exportClasses(nodes)
 exportClasses(nodes.and.edges)
@@ -61,6 +74,7 @@ importFrom(DiagrammeR,create_graph)
 importFrom(DiagrammeR,render_graph)
 importFrom(DiagrammeR,transform_to_subgraph_ws)
 importFrom(R.cache,clearCache)
+importFrom(R.cache,findCache)
 importFrom(R.cache,loadCache)
 importFrom(R.cache,saveCache)
 importFrom(cli,cli_abort)
