deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ import(cli)
 import(dplyr)
 import(ggplot2)
 import(glue)
+import(huxtable)
 import(pg13)
 import(purrr)
 import(tidyr)
@@ -96,6 +97,7 @@ importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
+importFrom(easyBakeOven,print_list)
 importFrom(forcats,fct_recode)
 importFrom(glue,glue)
 importFrom(huxtable,by_rows)
@@ -108,10 +110,13 @@ importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,set_names)
 importFrom(purrr,transpose)
+importFrom(rlang,list2)
 importFrom(rlang,parse_expr)
 importFrom(stringr,str_remove_all)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_replace_na)
 importFrom(tibble,as_tibble)
 importFrom(tibble,rowid_to_column)
+importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,unite)
