deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(add_tooltip)
 export(append_concept_examples)
 export(chariotViz)
+export(console_print_version)
 export(construct_graph)
 export(create_ancestor_nodes_and_edges)
 export(create_complete_nodes_and_edges)
@@ -46,6 +47,7 @@ export(plot_heatmap)
 export(remap_fillcolor_by_concept_class)
 export(remap_fillcolor_by_domain)
 export(remap_fillcolor_by_invalid_reason)
+export(rmd_print_version)
 export(save_to_cache)
 export(subgraph)
 export(view_all_counts)
