deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,10 +25,12 @@ export(filter_for_mapping_relationships)
 export(filter_for_taxonomy_relationships)
 export(filter_node_id_1)
 export(filter_node_id_2)
+export(filter_omop_ancestors)
 export(filter_omop_relationships)
 export(filter_out_lateral_relationships)
 export(filter_out_mapping_relationships)
 export(filter_out_taxonomy_relationships)
+export(format_version_key)
 export(get_logged_version_key)
 export(get_version_key)
 export(get_vocabulary_version_key)
@@ -36,6 +38,7 @@ export(hux_bold_values)
 export(hux_colorize)
 export(hux_pretty_numbers)
 export(hux_pretty_percents)
+export(map_ancestor_edge_attributes)
 export(map_edge_attributes)
 export(map_node_attributes)
 export(map_to_value)
@@ -49,10 +52,12 @@ export(remap_fillcolor_by_domain)
 export(remap_fillcolor_by_invalid_reason)
 export(rmd_print_version)
 export(save_to_cache)
+export(setup_chariotViz)
 export(subgraph)
 export(view_all_counts)
 export(view_from_counts)
 export(view_to_counts)
+exportClasses(ancestor.edges)
 exportClasses(ancestor.nodes)
 exportClasses(ancestor.nodes.and.edges)
 exportClasses(complete.edges)
