--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(hux_bold_values)
 export(hux_colorize)
 export(hux_pretty_numbers)
 export(hux_pretty_percents)
+export(include_legend)
 export(map_ancestor_edge_attributes)
 export(map_edge_attributes)
 export(map_node_attributes)
