deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(append_concept_examples)
 export(chariotViz)
 export(console_print_version)
 export(construct_graph)
+export(construct_legend)
 export(create_ancestor_nodes_and_edges)
 export(create_complete_nodes_and_edges)
 export(create_legend)
@@ -38,7 +39,6 @@ export(hux_bold_values)
 export(hux_colorize)
 export(hux_pretty_numbers)
 export(hux_pretty_percents)
-export(include_legend)
 export(map_ancestor_edge_attributes)
 export(map_edge_attributes)
 export(map_node_attributes)
