deploy pkg using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ export(add_tooltip)
 export(append_concept_examples)
 export(chariotViz)
 export(console_print_version)
+export(construct_edge_legend)
 export(construct_graph)
 export(construct_legend)
+export(construct_node_legend)
 export(create_ancestor_nodes_and_edges)
 export(create_complete_nodes_and_edges)
 export(create_legend)
