deploy pkg and GitHub Pages using glitter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,7 +47,6 @@ export(map_node_attributes)
 export(map_to_value)
 export(mutate_edges)
 export(mutate_nodes)
-export(node_color_map)
 export(omop_relationship_id_classification)
 export(plot_heatmap)
 export(remap_fillcolor_by_concept_class)
@@ -73,14 +72,6 @@ exportClasses(nodes.and.edges)
 exportClasses(omop.ancestors)
 exportClasses(omop.concept.example)
 exportClasses(omop.relationships)
-import(cli)
-import(dplyr)
-import(ggplot2)
-import(glue)
-import(huxtable)
-import(pg13)
-import(purrr)
-import(tidyr)
 importFrom(DiagrammeR,create_graph)
 importFrom(DiagrammeR,render_graph)
 importFrom(DiagrammeR,transform_to_subgraph_ws)
@@ -88,14 +79,27 @@ importFrom(R.cache,clearCache)
 importFrom(R.cache,findCache)
 importFrom(R.cache,loadCache)
 importFrom(R.cache,saveCache)
+importFrom(cli,cat_bullet)
+importFrom(cli,cat_line)
+importFrom(cli,cat_rule)
 importFrom(cli,cli_abort)
+importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_progress_bar)
+importFrom(cli,cli_progress_done)
+importFrom(cli,cli_progress_step)
+importFrom(cli,cli_progress_update)
 importFrom(cli,cli_warn)
+importFrom(cli,style_italic)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
+importFrom(dplyr,ends_with)
 importFrom(dplyr,enquo)
 importFrom(dplyr,enquos)
 importFrom(dplyr,filter)
@@ -103,30 +107,51 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
+importFrom(dplyr,mutate_at)
 importFrom(dplyr,n)
+importFrom(dplyr,rename)
+importFrom(dplyr,rename_all)
+importFrom(dplyr,rename_at)
 importFrom(dplyr,select)
+importFrom(dplyr,starts_with)
 importFrom(dplyr,summarize)
+importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(easyBakeOven,print_list)
 importFrom(forcats,fct_recode)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_fill_viridis_c)
+importFrom(ggplot2,theme)
 importFrom(glue,glue)
 importFrom(huxtable,by_rows)
 importFrom(huxtable,hux)
 importFrom(huxtable,map_background_color)
+importFrom(huxtable,print_screen)
+importFrom(huxtable,set_all_border_colors)
+importFrom(huxtable,set_all_borders)
+importFrom(huxtable,set_na_string)
 importFrom(huxtable,theme_article)
+importFrom(huxtable,theme_compact)
 importFrom(magrittr,"%>%")
 importFrom(pg13,query)
 importFrom(purrr,keep)
 importFrom(purrr,map)
+importFrom(purrr,reduce)
 importFrom(purrr,set_names)
 importFrom(purrr,transpose)
 importFrom(rlang,list2)
 importFrom(rlang,parse_expr)
+importFrom(scales,percent)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_replace_na)
 importFrom(tibble,as_tibble)
 importFrom(tibble,rowid_to_column)
 importFrom(tibble,tibble)
+importFrom(tidyr,extract)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unite)
