--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -5,5 +5,6 @@ articles:
   complete-rxnorm: complete-rxnorm.html
   genomic-domain: genomic-domain.html
   getting-started: getting-started.html
-last_built: 2021-08-28T08:58Z
+  traverse-domains: traverse-domains.html
+last_built: 2021-08-28T15:19Z
 
