added huxtable imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,8 +127,13 @@ importFrom(ggplot2,scale_fill_viridis_c)
 importFrom(ggplot2,theme)
 importFrom(glue,glue)
 importFrom(huxtable,by_rows)
+importFrom(huxtable,by_values)
+importFrom(huxtable,fmt_percent)
+importFrom(huxtable,fmt_pretty)
 importFrom(huxtable,hux)
 importFrom(huxtable,map_background_color)
+importFrom(huxtable,map_bold)
+importFrom(huxtable,number_format)
 importFrom(huxtable,print_screen)
 importFrom(huxtable,set_all_border_colors)
 importFrom(huxtable,set_all_borders)
