--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ exportClasses(nodes.and.edges)
 exportClasses(omop.ancestors)
 exportClasses(omop.concept.example)
 exportClasses(omop.relationships)
+import(cli)
 importFrom(DiagrammeR,create_graph)
 importFrom(DiagrammeR,render_graph)
 importFrom(DiagrammeR,transform_to_subgraph_ws)
@@ -86,10 +87,6 @@ importFrom(cli,cli_abort)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
-importFrom(cli,cli_progress_bar)
-importFrom(cli,cli_progress_done)
-importFrom(cli,cli_progress_step)
-importFrom(cli,cli_progress_update)
 importFrom(cli,cli_warn)
 importFrom(cli,style_italic)
 importFrom(dplyr,any_of)
