--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,10 +8,10 @@ navbar:
       menu:
       - text: "Getting Started: HemOnc Example"
         href: articles/getting-started.html
+      - text: "Domain Traversal"
+        href: articles/traverse-domains.html
       - text: "Genomic Domain"
         href: articles/genomic-domain.html
-      - text: "RxNorm and RxNorm Extension"
-        href: articles/rxnorm-and-rxnorm-extension.html
       - text: "Invalid to Valid RxNorm Concept Mappings"
       - href: articles/complete-rxnorm.html
 
